--- a/part1.css
+++ b/part1.css
@@ -1,305 +1,331 @@
- * {
-     margin: 0px;
-     padding: 0px;
-     box-sizing: border-box;
- }
-
- body {
-     background-color: black;
-     margin-right: 30px;
-     margin-left: 30px;
-     text-decoration: none;
- }
-
- .header {
-     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
-     margin-left: 30px;
-
-     margin-right: 23px;
-     height: 170px;
-     text-decoration: none;
-
- }
-
- .imghead {
-
-     margin-top: -20px;
-     width: 200PX;
-     height: 50PX;
-     margin-left: 30px;
-     margin-right: 30px;
-
- }
-
- .imghead img {
-     border: 1px none black;
-     border-radius: 50px;
- }
-
- .header ul li {
-     margin-left: 1500px;
-     margin-top: -25px;
-     text-decoration: none;
-
- }
-
- .header h1 {
-     text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00, 3px 4px 17px rgba(206, 89, 55, 0.64);
-     margin-top: -10px;
-     margin-left: 250px;
-     font-size: 50px;
-
- }
-
- img {
-     background-image: none;
-     margin-top: 30px;
-     margin-left: 0px;
-     width: 200PX;
-     height: 100PX;
-     text-decoration: none;
-     margin-bottom: 25px;
- }
-
- .ul1 ul li a {
-     color: #FFF;
-     font-size: medium;
-     list-style-type: none;
-     text-decoration: none;
-     display: flex;
-     flex-direction: column;
-
- }
-
- .navbar {
-     color: #FFF;
-     margin-top: 30px;
-     text-decoration: none;
-     display: inline;
-     background-image: repeating-linear-gradient(36deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1) 1px, transparent 0px, transparent 2px);
-     justify-content: center;
-     font-size: 24px;
-     text-indent: 50px;
- }
-
- #navbarNav {
-     color: #FFF;
-     display: inline;
-     text-decoration: none;
-
- }
-
- .nav-item {
-     margin-top: 30px;
-     display: inline;
-     text-decoration: none;
-     color: #FFF;
-     margin-top: 20px;
-     margin-right: 30px;
-     margin-right: 30px;
-     word-spacing: 100px;
-     background-color: none;
-     width: 2000px;
-     height: 100px;
- }
-
- a {
-     text-decoration: none;
-     color: #FFF;
-
- }
-
- input {
-     border: 2px;
-     border-radius: 15px;
-     text-decoration: none;
-     margin-left: 1300px;
-     margin-bottom: 50px;
-     width: 300px;
-     height: 40px;
-     position: absolute;
-     margin-top: -45px;
- }
-
- ul {
-     list-style: none;
- }
-
- .navbar-nav {
-     background-image: repeating-linear-gradient(36deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1) 1px, transparent 0px, transparent 2px);
-     margin-top: 40px;
-     width: 97.2%;
-     height: 50px;
-     margin-left: 30px;
-     margin-right: 30px;
-     margin-top: 0px;
- }
-
- .imgbig {
-     margin-top: 0px;
-     width: 100%;
-     height: 500px;
-     margin-left: 30px;
-     padding-right: 50px;
- }
-
- #H1 {
-     margin-top: -25px;
-     background-color: rgb(87, 39, 39);
-     text-align: center;
-     color: #FFF;
-     margin-left: 30px;
-     margin-right: 30px;
-     height: 50px;
- }
-
- .container {
-     background-color: #FFF;
-     width: 96.6%;
-     margin-left: 30px;
-     margin-right: -100px;
-     border: 4px none gray;
- }
-
- .box {
-
-
-     width: 300px;
-     height: 250px;
-     border: 8px solid grey;
-     background-color: #FFF;
-     margin-left: 100px;
-     margin-right: -100px;
-
-
- }
-
- .box1 {
-
-     width: 300px;
-     height: 250px;
-     border: 8px solid grey;
-     background-color: #FFF;
-     margin-left: 30px;
-     margin-right: -100px;
-     margin-left: 700px;
-     margin-top: -250px;
-
- }
-
- .box1 img {
-
-     width: 285px;
-     height: 120px;
-     margin-top: 0px;
-
- }
-
- .box img {
-
-     width: 280px;
-     height: 110px;
- }
-
- #imgtxt {
-     background-color: rgb(41, 38, 38);
-     color: #FFF;
-     width: 280px;
-     text-align: center;
-     margin-top: -25px;
-     height: 25px;
- }
-
- .box3 {
-     width: 300px;
-     height: 250px;
-     border: 8px solid grey;
-     background-color: #FFF;
-     margin-left: 30px;
-     margin-right: -100px;
-     margin-left: 1250px;
-     margin-top: -250px;
-
- }
-
- .box3 img {
-
-     width: 285px;
-     height: 120px;
-     margin-top: 0px;
-
- }
-
- .logos {
-     width: 96.6%;
-     height: 250px;
-
-     background-color: #FFF;
-     margin-left: 30px;
-     margin-right: -100px;
-
- }
-
- .logos img {
-     align-items: center;
-     margin-top: 50px;
-     margin-left: 200px;
-
- }
-
- .container1 {
-     background-color: rgba(153, 153, 153, 0.767);
-
- }
-
- .logo {
-     margin-left: -300px;
-     margin-top: 50px;
- }
-
- .logo img {
-     border: 1px none #000000;
-     border-radius: 50px;
-     margin-top: -00px
- }
-
- .logo h4 {
-     margin-left: 10px;
-     text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00, 3px 4px 17px rgba(206, 89, 55, 0.64);
-     margin-top: 0px;
- }
-
- .footer {
-     background-color: rgba(153, 153, 153, 0.767);
-     margin-left: 30px;
-     margin-right: 30px;
-     font-size: 24px;
-     height: 200px;
-
- }
-
- .row {
-     margin-left: 400px;
-     display: flex;
-     flex-wrap: wrap;
- }
-
- ul {
-     list-style: none;
-
- }
-
- #adresat a {
-     color: #000000;
-
- }
-
- #adresat {
-     margin-left: 25px;
-     margin-top: -200px;
- }
- .social-link{
- margin-left: 5px;
-
-    
- }
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: black;
+    margin-right: 30px;
+    margin-left: 30px;
+    text-decoration: none;
+}
+
+.header {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
+    margin-left: 30px;
+
+    margin-right: 23px;
+    height: 170px;
+    text-decoration: none;
+
+}
+
+.imghead {
+
+    margin-top: -20px;
+    width: 200PX;
+    height: 50PX;
+    margin-left: 30px;
+    margin-right: 30px;
+
+}
+
+.imghead img {
+    border: 1px none black;
+    border-radius: 50px;
+}
+
+.header ul li {
+    margin-left: 1500px;
+    margin-top: -25px;
+    text-decoration: none;
+
+}
+
+.header h1 {
+    text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00, 3px 4px 17px rgba(206, 89, 55, 0.64);
+    margin-top: -10px;
+    margin-left: 250px;
+    font-size: 50px;
+
+}
+
+img {
+    background-image: none;
+    margin-top: 30px;
+    margin-left: 0px;
+    width: 200PX;
+    height: 100PX;
+    text-decoration: none;
+    margin-bottom: 25px;
+}
+
+.ul1 ul li a {
+    color: #FFF;
+    font-size: medium;
+    list-style-type: none;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.navbar {
+    color: #FFF;
+    margin-top: 30px;
+    text-decoration: none;
+    display: inline;
+    background-image: repeating-linear-gradient(36deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1) 1px, transparent 0px, transparent 2px);
+    justify-content: center;
+    font-size: 24px;
+    text-indent: 50px;
+}
+
+#navbarNav {
+    color: #FFF;
+    display: inline;
+    text-decoration: none;
+
+}
+
+.nav-item {
+    margin-top: 30px;
+    display: inline;
+    text-decoration: none;
+    color: #FFF;
+    margin-top: 20px;
+    margin-right: 30px;
+    margin-right: 30px;
+    word-spacing: 100px;
+    background-color: none;
+    width: 2000px;
+    height: 100px;
+}
+
+a {
+    text-decoration: none;
+    color: #FFF;
+
+}
+
+input {
+    border: 2px;
+    border-radius: 15px;
+    text-decoration: none;
+    margin-left: 1300px;
+    margin-bottom: 50px;
+    width: 300px;
+    height: 40px;
+    position: absolute;
+    margin-top: -45px;
+}
+
+ul {
+    list-style: none;
+}
+
+.navbar-nav {
+    background-image: repeating-linear-gradient(36deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1) 1px, transparent 0px, transparent 2px);
+    margin-top: 40px;
+    width: 97.2%;
+    height: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 0px;
+}
+
+.imgbig {
+    margin-top: 0px;
+    width: 100%;
+    height: 500px;
+    margin-left: 30px;
+    padding-right: 50px;
+}
+
+#H1 {
+    margin-top: -25px;
+    background-color: rgb(87, 39, 39);
+    text-align: center;
+    color: #FFF;
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 50px;
+}
+
+.container {
+    background-color: #FFF;
+    width: 96.6%;
+    margin-left: 30px;
+    margin-right: -100px;
+    border: 4px none gray;
+}
+
+.box {
+
+
+    width: 300px;
+    height: 250px;
+    border: 8px solid grey;
+    background-color: #FFF;
+    margin-left: 100px;
+    margin-right: -100px;
+
+
+}
+
+.box1 {
+
+    width: 300px;
+    height: 250px;
+    border: 8px solid grey;
+    background-color: #FFF;
+    margin-left: 30px;
+    margin-right: -100px;
+    margin-left: 700px;
+    margin-top: -250px;
+
+}
+
+.box1 img {
+
+    width: 285px;
+    height: 120px;
+    margin-top: 0px;
+
+}
+
+.box img {
+
+    width: 280px;
+    height: 110px;
+}
+
+#imgtxt {
+    background-color: rgb(41, 38, 38);
+    color: #FFF;
+    width: 280px;
+    text-align: center;
+    margin-top: -25px;
+    height: 25px;
+}
+
+.box3 {
+    width: 300px;
+    height: 250px;
+    border: 8px solid grey;
+    background-color: #FFF;
+    margin-left: 30px;
+    margin-right: -100px;
+    margin-left: 1250px;
+    margin-top: -250px;
+
+}
+
+.box3 img {
+
+    width: 285px;
+    height: 120px;
+    margin-top: 0px;
+
+}
+
+.logos {
+    width: 96.6%;
+    height: 250px;
+
+    background-color: #FFF;
+    margin-left: 30px;
+    margin-right: -100px;
+
+}
+
+.logos img {
+    align-items: center;
+    margin-top: 50px;
+    margin-left: 200px;
+
+}
+
+.container1 {
+    background-color: rgba(153, 153, 153, 0.767);
+
+}
+
+.logo {
+    margin-left: -300px;
+    margin-top: 50px;
+}
+
+.logo img {
+    border: 1px none #000000;
+    border-radius: 50px;
+    margin-top: -00px
+}
+
+.logo h4 {
+    margin-left: 10px;
+    text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00, 3px 4px 17px rgba(206, 89, 55, 0.64);
+    margin-top: 0px;
+}
+
+.footer {
+    background-color: rgba(153, 153, 153, 0.767);
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 24px;
+    height: 200px;
+
+}
+
+.row {
+    margin-left: 400px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+ul {
+    list-style: none;
+
+}
+
+#adresat a {
+    color: #000000;
+
+}
+
+#adresat {
+    margin-left: 25px;
+    margin-top: -200px;
+}
+
+.social-link {
+    margin-left: 5px;
+
+}
+
+ul li a:hover {
+    color: #a10000;
+
+}
+
+@media screen and (max-width: 700px) {
+
+    .row,
+    .navbar {
+        flex-direction: column;
+    }
+}
+
+@media(max-width: 767px) {
+    .footer-col {
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
+
+@media(max-width: 574px) {
+    .footer-col {
+        width: 100%;
+    }
+}
